--- a/suggest.html
+++ b/suggest.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <h1>Moxxis Bar</h1>
+        <h1>Suggest</h1>
         <ul>
             <li><a href="main.html">Home</a></li>
             <li><a href="recipes.html">Recipes</a></li>
