added css file, added two more recipes to the recipes page

--- a/suggest.html
+++ b/suggest.html
@@ -2,14 +2,16 @@
 <html>
     <head>
         <title>Moxxis Bar</title>
+        <link type="text/css" rel="stylesheet" href="main.css">
     </head>
 
     <body>
-        <h1>Suggest</h1>
+        <h1>Moxxis Bar</h1>
         <ul>
             <li><a href="main.html">Home</a></li>
             <li><a href="recipes.html">Recipes</a></li>
             <li><a href="suggest.html">Suggest</a></li>
         </ul>
+        <h2>Suggest</h2>
     </body>
 </html>
