--- a/recipes.html
+++ b/recipes.html
@@ -2,14 +2,30 @@
 <html>
     <head>
         <title>Moxxis Bar</title>
+        <link type="text/css" rel="stylesheet" href="main.css">
     </head>
 
     <body>
-        <h1>Recipes</h1>
+        <h1>Moxxis Bar</h1>
         <ul>
             <li><a href="main.html">Home</a></li>
             <li><a href="recipes.html">Recipes</a></li>
             <li><a href="suggest.html">Suggest</a></li>
+        </ul>
+        <h2>Recipes</h2>
+        <ul>
+            <li>
+                <h3><a href="margarita.html">Margarita</a></h3>
+                <p>The origin of the Margarita recipe is fiercely debated, but we think it's got Mexico written all over it. With tequila, triple sec and fresh lime it's tart, zingy and satisfying.</p>
+            </li>
+            <li>
+                <h3><a href="#">Pina colada</a></h3>
+                <p>First made in Puerto Rico back in 1952, with this rum, pineapple and coconut cream cocktail in your hand all you'll be missing is the sand between your toes.</p>
+            </li>
+            <li>
+                <h3><a href="#">Elderflower lemonade with frozen berries</a></h3>
+                <p>A brilliant drink for party-goers not on the booze, this refreshing cocktail looks and tastes fantastic.</p>
+            </li>
         </ul>
     </body>
 </html>
