--- a/margarita.html
+++ b/margarita.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Moxxis Bar</h1>
-        <ul>
+        <ul class="nav">
             <li><a href="main.html">Home</a></li>
             <li><a href="recipes.html">Recipes</a></li>
             <li><a href="suggest.html">Suggest</a></li>
