--- a/recipes.html
+++ b/recipes.html
@@ -7,13 +7,13 @@
 
     <body>
         <h1>Moxxis Bar</h1>
-        <ul>
+        <ul class="nav">
             <li><a href="main.html">Home</a></li>
             <li><a href="recipes.html">Recipes</a></li>
             <li><a href="suggest.html">Suggest</a></li>
         </ul>
         <h2>Recipes</h2>
-        <ul>
+        <ul class="recipes">
             <li>
                 <h3><a href="margarita.html">Margarita</a></h3>
                 <p>The origin of the Margarita recipe is fiercely debated, but we think it's got Mexico written all over it. With tequila, triple sec and fresh lime it's tart, zingy and satisfying.</p>
