added header and content classes and styled them

--- a/margarita.html
+++ b/margarita.html
@@ -6,29 +6,34 @@
     </head>
 
     <body>
-        <h1>Moxxis Bar</h1>
-        <ul class="nav">
-            <li><a href="main.html">Home</a></li>
-            <li><a href="recipes.html">Recipes</a></li>
-            <li><a href="suggest.html">Suggest</a></li>
-        </ul>
-        <h2>Margarita</h2>
-        <p>The origin of the Margarita recipe is fiercely debated, but we think it's got Mexico written all over it. With tequila, triple sec and fresh lime it's tart, zingy and satisfying.</p>
-        <h3>Ingredients</h3>
-        <ul>
-            <li>1 part Cazadores Tequila</li>
-            <li>½ part triple sec liqueur</li>
-            <li>½ part lime juice</li>
-            <li>1 lime wedge</li>
-            <li>Salt</li>
-            <li>Cubed ice</li>
-        </ul>
-        <h3>How to mix</h3>
-        <ol>
-            <li>Chill your glass (the easiest way is to fill it with ice)</li>
-            <li>Put lots of ice and all of the ingredients into a shaker, then shake hard for about 30 seconds to chill the liquid really well</li>
-            <li>Run a lime wedge around the outside of the rim of your glass before rolling the rim in salt</li>
-            <li>Double strain the mix into the glass</li>
-        </ol>
+        <div class="header">
+            <h1>Moxxis Bar</h1>
+            <ul class="nav">
+                <li><a href="main.html">Home</a></li>
+                <li><a href="recipes.html">Recipes</a></li>
+                <li><a href="suggest.html">Suggest</a></li>
+            </ul>
+        </div> <!-- header div end -->
+
+        <div class="content">
+            <h2>Margarita</h2>
+            <p>The origin of the Margarita recipe is fiercely debated, but we think it's got Mexico written all over it. With tequila, triple sec and fresh lime it's tart, zingy and satisfying.</p>
+            <h3>Ingredients</h3>
+            <ul>
+                <li>1 part Cazadores Tequila</li>
+                <li>½ part triple sec liqueur</li>
+                <li>½ part lime juice</li>
+                <li>1 lime wedge</li>
+                <li>Salt</li>
+                <li>Cubed ice</li>
+            </ul>
+            <h3>How to mix</h3>
+            <ol>
+                <li>Chill your glass (the easiest way is to fill it with ice)</li>
+                <li>Put lots of ice and all of the ingredients into a shaker, then shake hard for about 30 seconds to chill the liquid really well</li>
+                <li>Run a lime wedge around the outside of the rim of your glass before rolling the rim in salt</li>
+                <li>Double strain the mix into the glass</li>
+            </ol>
+        </div> <!-- content div end -->
     </body>
 </html>
