--- a/suggest.html
+++ b/suggest.html
@@ -6,12 +6,17 @@
     </head>
 
     <body>
-        <h1>Moxxis Bar</h1>
-        <ul class="nav">
-            <li><a href="main.html">Home</a></li>
-            <li><a href="recipes.html">Recipes</a></li>
-            <li><a href="suggest.html">Suggest</a></li>
-        </ul>
-        <h2>Suggest</h2>
+        <div class="header">
+            <h1>Moxxis Bar</h1>
+            <ul class="nav">
+                <li><a href="main.html">Home</a></li>
+                <li><a href="recipes.html">Recipes</a></li>
+                <li><a href="suggest.html">Suggest</a></li>
+            </ul>
+        </div> <!-- header div end -->
+
+        <div class="content">
+            <h2>Suggest</h2>
+        </div> <!-- content div end -->
     </body>
 </html>
