added images, heatured recipe, changed css

--- a/main.html
+++ b/main.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Moxxis Bar</title>
+        <title>Peach Pit</title>
         <link type="text/css" rel="stylesheet" href="main.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     </head>
 
     <body>
         <div class="header">
-            <h1>Moxxis Bar</h1>
+            <h1>Peach Pit</h1>
             <ul class="nav">
                 <li><a href="main.html">Home</a></li>
+                <li>&#9880;</li>
                 <li><a href="recipes.html">Recipes</a></li>
+                <li>&#9880;</li>
                 <li><a href="suggest.html">Suggest</a></li>
             </ul>
         </div> <!-- header div end -->
 
         <div class="content">
+            <div class="featured">
+                <h3>Featured Cocktail: Pina Colada</h3>
+            </div>
         </div> <!-- content div end -->
     </body>
 </html>
