--- a/recipes.html
+++ b/recipes.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Moxxis Bar</title>
+        <title>Peach Pit</title>
         <link type="text/css" rel="stylesheet" href="main.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     </head>
 
     <body>
         <div class="header">
-            <h1>Moxxis Bar</h1>
+            <h1>Peach Pit</h1>
             <ul class="nav">
                 <li><a href="main.html">Home</a></li>
+                <li>&#9880;</li>
                 <li><a href="recipes.html">Recipes</a></li>
+                <li>&#9880;</li>
                 <li><a href="suggest.html">Suggest</a></li>
             </ul>
         </div> <!-- header div end -->
@@ -20,14 +23,17 @@
             <ul class="recipes">
                 <li>
                     <h3><a href="margarita.html">Margarita</a></h3>
+                    <img src="img/1.jpg" alt="Margarita cocktail photo">
                     <p>The origin of the Margarita recipe is fiercely debated, but we think it's got Mexico written all over it. With tequila, triple sec and fresh lime it's tart, zingy and satisfying.</p>
                 </li>
                 <li>
                     <h3><a href="#">Pina colada</a></h3>
+                    <img src="img/2.jpg" alt="Pina colada cocktail photo">
                     <p>First made in Puerto Rico back in 1952, with this rum, pineapple and coconut cream cocktail in your hand all you'll be missing is the sand between your toes.</p>
                 </li>
                 <li>
                     <h3><a href="#">Elderflower lemonade with frozen berries</a></h3>
+                    <img src="img/3.jpg" alt="Elderflower lemonade photo">
                     <p>A brilliant drink for party-goers not on the booze, this refreshing cocktail looks and tastes fantastic.</p>
                 </li>
             </ul>
