--- a/suggest.html
+++ b/suggest.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Moxxis Bar</title>
+        <title>Peach Pit</title>
         <link type="text/css" rel="stylesheet" href="main.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     </head>
 
     <body>
         <div class="header">
-            <h1>Moxxis Bar</h1>
+            <h1>Peach Pit</h1>
             <ul class="nav">
                 <li><a href="main.html">Home</a></li>
+                <li>&#9880;</li>
                 <li><a href="recipes.html">Recipes</a></li>
+                <li>&#9880;</li>
                 <li><a href="suggest.html">Suggest</a></li>
             </ul>
         </div> <!-- header div end -->
