removed main page, edited css, added buttons to look for recipe

--- a/recipes.html
+++ b/recipes.html
@@ -10,8 +10,6 @@
         <div class="header">
             <h1>Peach Pit</h1>
             <ul class="nav">
-                <li><a href="main.html">Home</a></li>
-                <li>&#9880;</li>
                 <li><a href="recipes.html">Recipes</a></li>
                 <li>&#9880;</li>
                 <li><a href="suggest.html">Suggest</a></li>
@@ -23,18 +21,21 @@
             <ul class="recipes">
                 <li>
                     <img src="img/1.jpg" alt="Margarita cocktail photo">
-                    <h3><a href="margarita.html">Margarita</a></h3>
+                    <h3>Margarita</h3>
                     <p>The origin of the Margarita recipe is fiercely debated, but we think it's got Mexico written all over it. With tequila, triple sec and fresh lime it's tart, zingy and satisfying.</p>
+                    <a href="margarita.html">View</a>
                 </li>
                 <li>
                     <img src="img/2.jpg" alt="Pina colada cocktail photo">
-                    <h3><a href="#">Pina colada</a></h3>
+                    <h3>Pina colada</h3>
                     <p>First made in Puerto Rico back in 1952, with this rum, pineapple and coconut cream cocktail in your hand all you'll be missing is the sand between your toes.</p>
+                    <a href="margarita.html">View</a>
                 </li>
                 <li>
                     <img src="img/3.jpg" alt="Elderflower lemonade photo">
-                    <h3><a href="#">Elderflower lemonade with frozen berries</a></h3>
+                    <h3>Elderflower lemonade with frozen berries</h3>
                     <p>A brilliant drink for party-goers not on the booze, this refreshing cocktail looks and tastes fantastic.</p>
+                    <a href="margarita.html">View</a>
                 </li>
             </ul>
         </div> <!-- content div end -->
