--- a/suggest.html
+++ b/suggest.html
@@ -19,14 +19,14 @@
         <div class="content">
             <h2>Suggest</h2>
             <form class="suggest-form" id="suggest-recipe">
-                <label for="recipe-name">Recipe Name:</label>
-                <input id="recipe-name" type="text">
-                <label for="recipe-ingredients">Ingredients and description:</label>
-                <textarea id="recipe-ingredients"></textarea>
+                <label for="recipe-name"><span>*</span>Recipe Name:</label>
+                <input id="recipe-name" type="text" autofocus required>
+                <label for="recipe-ingredients"><span>*</span>Ingredients and description:</label>
+                <textarea id="recipe-ingredients" required></textarea>
                 <label for="user-name">Your Name:</label>
                 <input id="user-name"type="text">
                 <label for="user-email">Your e-mail:</label>
-                <input id="user-email" type="text">
+                <input id="user-email" type="email">
                 <input type="submit" value="Send">
             </form>
         </div> <!-- content div end -->
