--- a/suggest.html
+++ b/suggest.html
@@ -10,7 +10,7 @@
         <div class="header">
             <h1>Peach Pit</h1>
             <ul class="nav">
-                <li><a href="recipes.html">Recipes</a></li>
+                <li><a href="index.html">Recipes</a></li>
                 <li>&#9880;</li>
                 <li><a href="suggest.html">Suggest</a></li>
             </ul>
